--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.20.0",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
+    "mongoose": "^6.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
